Some work on new game screen.

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="wot1app">
+<html lang="en" ng-app="wot1">
 <head>
   <meta charset="utf-8">
   <title>Way of the Tiger: Avenger!</title>
