--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Way of the Tiger: Avenger!</title>
-    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">-->
+    <!--In production use:
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
+    -->
     <link rel="stylesheet" href="css/bootstrap-combined.min.css" />
     <link rel="stylesheet" href="css/app.css"/>
 </head>
