--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
-<html lang="en" ng-app="wot1">
+<html lang="en" id="ng-app" ng-app="wot1">
 <head>
     <meta charset="utf-8">
     <title>Way of the Tiger: Avenger!</title>
     <!--In production use:
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
     -->
+    <!--[if lte IE 8]>
+        <script src="js/json2.js"></script>
+    <![endif]-->
     <link rel="stylesheet" href="css/bootstrap-combined.min.css" />
     <link rel="stylesheet" href="css/app.css"/>
 </head>
