--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,10 @@
     -->
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-resource.js"></script>
+    <script src="lib/showdown/showdown.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/directives.js"></script>
 </body>
 </html>
