--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     -->
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-resource.js"></script>
+    <script src="lib/angular-local-storage/localStorageModule.js"></script>
     <script src="lib/showdown/showdown.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
