--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
         <script src="js/json2.js"></script>
     <![endif]-->
     <link rel="stylesheet" href="css/bootstrap-combined.min.css" />
+    <link rel="stylesheet" href="css/jquery.pnotify.default.css" />
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
@@ -18,13 +19,14 @@
     <!-- In production use:
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular-resource.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
     -->
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-resource.js"></script>
     <script src="lib/angular-local-storage/localStorageModule.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="js/jquery.pnotify.min.js"></script>
     <script src="lib/showdown/showdown.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
