--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,3 @@
-<script src="scripts/controllers/main.js"></script>
 <!doctype html>
 <html lang="en" id="ng-app" ng-app="wot1">
 <head>
@@ -27,8 +26,9 @@
     <script src="lib/angular/angular-resource.js"></script>
     <script src="lib/angular-local-storage/localStorageModule.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="js/jquery.pnotify.min.js"></script>
+    <script src="lib/jquery.pnotify.min.js"></script>
     <script src="lib/showdown/showdown.js"></script>
+    <script src="lib/underscore/underscore-min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
