--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,10 @@
 <html lang="en" id="ng-app" ng-app="wot1">
 <head>
     <meta charset="utf-8">
+    <meta property="og:title" content="Way of the Tiger: Avenger!" />
+    <meta property="og:description" content="You are Avenger, a Ninja Warrior, worshipper of Kwon, Supreme Master of Unarmed Combat. Trained in the Way of the Tiger, you are now an outstanding master of the martial arts, ready to use your deadly skills to overturn evil and to avenge the death of your foster-father, Naijishi." />
+    <meta property="og:url" content="http://ropable.com/avenger/" />
+    <meta property="og:image" content="http://ropable.com/avenger/img/tiger.png" />
     <title>Way of the Tiger: Avenger!</title>
     <!--In production use:
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
