--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,6 @@
     <!--In production use:
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
     -->
-    <!--[if lte IE 8]>
-        <script src="js/json2.js"></script>
-    <![endif]-->
     <link rel="stylesheet" href="css/bootstrap-combined.min.css" />
     <link rel="stylesheet" href="css/jquery.pnotify.default.css" />
     <link rel="stylesheet" href="css/app.css"/>
@@ -35,6 +32,10 @@
     <script src="lib/jquery.pnotify.min.js"></script>
     <script src="lib/showdown/showdown.js"></script>
     <script src="lib/underscore/underscore.js"></script>
+    <!-- Local libs -->
+    <!--[if lte IE 8]>
+        <script src="lib/json2.js"></script>
+    <![endif]-->
     <script src="lib/angular-local-storage/localStorageModule.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
