Added footer text attributing authors to index.html.

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,15 @@
     <link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet' type='text/css'>
 </head>
 <body>
+    <div id="wrap">
     <ng-view></ng-view>
+    <div id="push"></div>
+    </div> <! -- end wrap -->
+    <div id="footer">
+        <p class="text-center">
+            <small>Avenger was written by Mark Smith and illustrated by Jamie Thomson</small>
+        </p>
+    </div> <!-- end footer -->
 
     <!-- In production use:
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
