Smarten up interface. Various tweaks to story data. Fix bug with entry option.

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
     </div> <! -- end wrap -->
     <div id="footer">
         <p class="text-center">
-            <small>Avenger was written by Mark Smith and illustrated by Jamie Thomson</small>
+            <small>Avenger was written by Mark Smith and Jamie Thomson, illustrated by Bob Harvey.</small>
         </p>
     </div> <!-- end footer -->
 
