--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="css/bootstrap-combined.min.css" />
     <link rel="stylesheet" href="css/jquery.pnotify.default.css" />
     <link rel="stylesheet" href="css/app.css"/>
-    <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Shojumaru' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Loved+by+the+King' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div id="wrap">
